--- a/src/main/resources/templates/checklist/view.html
+++ b/src/main/resources/templates/checklist/view.html
@@ -172,14 +172,12 @@
         // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
 
         var tr = table.insertRow(-1);                   // TABLE ROW.
-        tr.style.borderSpacing = "10px 10px";
-        tr.style.backgroundColor = "bisque";
-        tr.style.border = "1px solid black";
 
         for (var i = 0; i < col.length; i++) {
             var th = document.createElement("th");      // TABLE HEADER.
             th.style.padding = "40px 100px 40px 136px";
             th.style.border = "1px solid black";
+            th.style.backgroundColor = "bisque";
             th.innerHTML = col[i];
             tr.appendChild(th);
         }
@@ -192,6 +190,7 @@
             for (var j = 0; j < col.length; j++) {
                 var tabCell = tr.insertCell(-1);
                 tabCell.style.border = "1px solid black";
+                tabCell.style.backgroundColor="#F5F5DC";
                 tabCell.innerHTML = myData[i][col[j]];
             }
         }
@@ -199,7 +198,6 @@
         table.style.border = "1px solid black";
         table.style.borderSpacing = "10px 10px";
         table.style.textAlign="center";
-        table.style.backgroundColor="#F5F5DC";
 
         // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
         document.getElementById("showData").appendChild(table);
