--- a/src/main/resources/templates/checklist/create.html
+++ b/src/main/resources/templates/checklist/create.html
@@ -80,7 +80,7 @@
         </td>
       </tr>
       <tr>
-        <td><input type="submit" style="background-color: red;color: white;width: 70px" value="Create"></td></br>
+        <td><input type="submit" style="background-color: red;color: white;width: 70px" value="Tạo mới"></td></br>
       </tr>
       </div>
     </fieldset>
