--- a/src/main/resources/templates/checklist/list.html
+++ b/src/main/resources/templates/checklist/list.html
@@ -55,7 +55,7 @@
           </div>
         </div></div>
     </div></div></div>
-<h3  style="color: brown"> Danh Sách Kiểm đồ</h3>
+<h3 style="font-size: 30px;margin-top: 10px; margin-left: 80px; color: #770000">Danh sách kiểm đồ</h3>
 <p>
   <a th:href="@{/home/checklist/create}"><button style="background-color: lightblue ; color: firebrick;height: 30px;">Thêm mới kiểm đồ</button></a>
 </p>
