--- a/src/main/resources/templates/employee/create.html
+++ b/src/main/resources/templates/employee/create.html
@@ -62,9 +62,7 @@
             <legend style="color: red">Thông tin nhân viên</legend>
             <div id="abbb" style="border:  solid 3px #770000; margin-bottom: 100px ">
             <tr>
-                <td></td>
-                <label class="control-label" for="id" style="margin-right: 100px" >ID </label></td>
-                <td><input type="text" class="form-control" id="id" th:field="*{id}" readonly ></td></br>
+                <td><input type="text" class="form-control" id="id" th:field="*{id}" readonly hidden></td></br>
             </tr>
             <tr>
                 <td><label class="control-label" for="id1" style="margin-right: 100px">Tên nhân viên </label></td>
