--- a/src/main/resources/templates/checklist/view.html
+++ b/src/main/resources/templates/checklist/view.html
@@ -123,7 +123,7 @@
 
 
 
-<div id="footer"  style="height: 70px;">
+<div  id="footer5"  style="height: 70px;     background-color: lightblue;">
     <div id="footer1" style="width: 50% ; float: left">
         <ul class="breadcrumb" style="background-color: lightblue">
             <li><a href="#"><h2>*Giới thiệu</h2></a></li>
@@ -141,7 +141,7 @@
         <a href="https://www.google.com"><img src="/pictures2/gg.png" style="width: 40px; height: 40px"></a>
         <a href="https://www.google.com/maps"><img src="/pictures2/ggm.png" style="width: 40px; height: 40px"></a>
     </div>
-</div>
+</div >
 <script>
     $(document).ready(function () {
         let dataCheck = $("#data2").val();
