--- a/src/main/resources/templates/dishes/createDishes.html
+++ b/src/main/resources/templates/dishes/createDishes.html
@@ -63,9 +63,7 @@
             <legend style="color: red">Thông tin món</legend>
             <div id="abbb" style="border:  solid 3px #770000; margin-bottom: 100px ">
             <tr>
-                <td></td>
-                <label class="control-label" for="mota" style="margin-right: 120px">ID </label></td>
-                <td><input type="text" class="form-control" id="mota" th:field="*{id}" readonly style="margin-left: 0px"></td></br>
+                <td><input type="text" class="form-control" id="mota" th:field="*{id}" readonly style="margin-left: 0px" hidden></td></br>
             </tr>
             <tr>
                 <td><label class="control-label" for="name"  style="margin-right: 120px">Tên </label></td>
@@ -86,7 +84,7 @@
             </tr>
             </br>
             <tr>
-                <td><input type="submit" style="width:100px; height: 30px;background-color: red;color: white" value="Cập nhật"></td></br>
+                <td><input type="submit" style="width:100px; height: 30px;background-color: red;color: white" value="Tạo món"></td></br>
             </tr>
             </div>
         </fieldset>
