--- a/src/main/resources/templates/dishes/dishes.html
+++ b/src/main/resources/templates/dishes/dishes.html
@@ -15,7 +15,7 @@
 
     <script src="/js/homeDish.js" type="text/javascript"></script>
 </head>
-<body >
+<body>
 <div class="container-fluid" style="margin-bottom:20px">
     <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-3" style="background-color: khaki;;">
@@ -30,7 +30,8 @@
                     <li><a th:href="@{/dishes}" title="DISH"><strong>MÓN</strong></a></li>
                     <li><a th:href="@{/home/checklist}"><strong>BẢNG KIỂM ĐỒ </strong></a></li>
                     <li><a th:href="@{/home/main-ingredient}"><strong>NGUYÊN LIỆU</strong></a></li>
-                    <li><a th:href="@{/home/employee}" title="Employee Profile"><strong>HỒ SƠ NHÂN VIÊN</strong></a></li>
+                    <li><a th:href="@{/home/employee}" title="Employee Profile"><strong>HỒ SƠ NHÂN VIÊN</strong></a>
+                    </li>
                     <li><a href="#" title="CONTACTS"><strong></strong></a></li>
                     <input type="text" name="text" id="text" value=""/>
                 </ul>
@@ -52,70 +53,78 @@
                     <div class="item">
                         <img src="/pictures2/0a336.jpg" alt="Chania" style="width: 450px;height: 120px;">
                     </div>
-                </div></div>
-        </div></div></div>
-<table id="dishes" border="2" style="border: black">
-            <a th:href="@{/dishes/create}">
-                <button style="background-color: lightblue ; color: firebrick;height: 30px;">Thêm món mới</button>
-            </a>
-            <thead>
-            <tr>
-                <th>Tên món</th>
-                <th>Công thức</th>
-                <th>Tình trạng</th>
-                <th>Chỉnh sửa</th>
-                <th>Xóa món</th>
-                <th>Chi tiết</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="row,rowStat : ${dishes}">
-                <!--        <td th:text="${row.getId()}"></td>-->
-                <td th:text="${row.getName()}"></td>
-                <td th:text="${row.getRecipe()}"></td>
-                <td th:text="${row.getStatus()==0 ? 'Không đủ nguyên liệu' : 'Đủ nguyên liệu'}"></td>
-
-                <td><a th:href="@{/dishes/{id}/edit(id=${row.getId()})}">
-                    <button>Chỉnh sửa</button>
-                </a></td>
-                <td><a th:href="@{/dishes/{id}/delete(id=${row.getId()})}">
-                    <button>Xóa món</button>
-                </a></td>
-                <td><a th:href="@{/dishes/{id}/view(id=${row.getId()})}">
-                    <button>Chi tiết</button>
-                </a></td>
-            </tr>
-            </tbody>
-            <div style="font-size: 25px; text-align: center">
-                <a th:href="@{'/dishes'(page=${dishes.number - 1})}" th:if="${dishes.hasPrevious()}">Trước</a>
-                <span th:text="${dishes.number + 1}"></span>/<span th:text="${dishes.totalPages}"></span>
-                <a th:href="@{'/dishes'(page=${dishes.number + 1})}" th:if="${dishes.hasNext()}">Sau</a>
+                </div>
             </div>
-        </table>
+        </div>
+    </div>
+</div>
+<h3 style="font-size: 30px;margin-top: 10px; margin-left: 80px; color: #770000">Danh sách món ăn</h3>
+<th:block th:if="${message}">
+    <p th:text="${message}"></p>
+</th:block>
 
-        <table id="dishes2" border="2" style="border: black" hidden>
-            <thead>
-            <tr>
-                <th>Tên món</th>
-                <th>Công thức</th>
-                <th>Tình trạng</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="row,rowStat : ${dishes2}">
-                <!--        <td th:text="${row.getId()}"></td>-->
-                <td th:text="${row.getName()}"></td>
-                <td th:text="${row.getRecipe()}"></td>
-                <td th:text="${row.getStatus()==0 ? 'Không đủ nguyên liệu' : 'Đủ nguyên liệu'}"></td>
-            </tr>
-            </tbody>
-        </table>
+<table id="dishes" border="2" style="border: black">
+    <a th:href="@{/dishes/create}">
+        <button style="background-color: lightblue ; color: firebrick;height: 30px;">Thêm món mới</button>
+    </a>
+    <thead>
+    <tr>
+        <th>Tên món</th>
+        <th>Công thức</th>
+        <th>Tình trạng</th>
+        <th>Chỉnh sửa</th>
+        <th>Xóa món</th>
+        <th>Chi tiết</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="row,rowStat : ${dishes}">
+        <!--        <td th:text="${row.getId()}"></td>-->
+        <td th:text="${row.getName()}"></td>
+        <td th:text="${row.getRecipe()}"></td>
+        <td th:text="${row.getStatus()==0 ? 'Không đủ nguyên liệu' : 'Đủ nguyên liệu'}"></td>
 
-        <a id="downloadLink" onclick="exportF(this)">
-            <button style="background-color: #770000;color: antiquewhite">In file excel</button>
-        </a>
+        <td><a th:href="@{/dishes/{id}/edit(id=${row.getId()})}">
+            <button>Chỉnh sửa</button>
+        </a></td>
+        <td><a th:href="@{/dishes/{id}/delete(id=${row.getId()})}">
+            <button>Xóa món</button>
+        </a></td>
+        <td><a th:href="@{/dishes/{id}/view(id=${row.getId()})}">
+            <button>Chi tiết</button>
+        </a></td>
+    </tr>
+    </tbody>
+    <div style="font-size: 25px; text-align: center">
+        <a th:href="@{'/dishes'(page=${dishes.number - 1})}" th:if="${dishes.hasPrevious()}">Trước</a>
+        <span th:text="${dishes.number + 1}"></span>/<span th:text="${dishes.totalPages}"></span>
+        <a th:href="@{'/dishes'(page=${dishes.number + 1})}" th:if="${dishes.hasNext()}">Sau</a>
+    </div>
+</table>
 
-<div id="footer"  style="height: 70px;">
+<table id="dishes2" border="2" style="border: black" hidden>
+    <thead>
+    <tr>
+        <th>Tên món</th>
+        <th>Công thức</th>
+        <th>Tình trạng</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="row,rowStat : ${dishes2}">
+        <!--        <td th:text="${row.getId()}"></td>-->
+        <td th:text="${row.getName()}"></td>
+        <td th:text="${row.getRecipe()}"></td>
+        <td th:text="${row.getStatus()==0 ? 'Không đủ nguyên liệu' : 'Đủ nguyên liệu'}"></td>
+    </tr>
+    </tbody>
+</table>
+
+<a id="downloadLink" onclick="exportF(this)">
+    <button style="background-color: #770000;color: antiquewhite">In file excel</button>
+</a>
+
+<div id="footer" style="height: 70px;">
     <div id="footer1" style="width: 50% ; float: left">
         <ul class="breadcrumb" style="background-color: lightblue">
             <li><a href="#"><h2>*Giới thiệu</h2></a></li>
